# spatial_audio_server

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
assets/: config.json
src/: app.rs  camera.rs  config.rs  geom.rs  installation.rs  lib.rs  main.rs  master.rs  metres.rs  utils.rs
src/audio/: dbap.rs  detection.rs  detector.rs  fft.rs  input.rs  mod.rs  output.rs  sound.rs  speaker.rs
src/audio/source/: mod.rs  realtime.rs
src/audio/source/wav/: mod.rs  reader.rs
src/gui/: mod.rs  monitor.rs  theme.rs
src/gui/editors/: audio_monitor.rs  control_log.rs  device_editor.rs  installation_editor.rs  master.rs  mod.rs  osc_in_log.rs  osc_out_log.rs  project_editor.rs  soundscape_editor.rs  source_editor.rs  speaker_editor.rs
src/osc/: input.rs  output.rs
src/project/: config.rs  mod.rs
src/soundscape/: group.rs  mod.rs
src/soundscape/movement/: agent.rs  mod.rs  ngon.rs
