[package]
name = "audio_server"
version = "0.2.0"
edition = "2021"
default-run = "audio_server"

[[bin]]
name = "audio_server"
path = "src/main.rs"

[lib]
name = "audio_server"
path = "src/lib.rs"

[dependencies]
# GUI / windowing — eframe bundles egui, winit, wgpu/glow
eframe = { version = "0.34", default-features = false, features = ["wgpu"] }
egui   = "0.34"

# Audio
cpal     = "0.17"
hound    = "3"
rustfft  = "6"
realfft  = "3"

# Control protocols
rosc = "0.11"

# Threading
crossbeam = "0.8"

# Math
glam = "0.33"
rand = "0.10"

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
fxhash   = "0.2"
walkdir  = "2"
anyhow   = "1"
log      = "0.4"
slug     = "0.1"

[features]
asio             = ["cpal/asio"]
test_with_stereo = []

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1
